# jpeglevel

./: .gitignore  AUTHORS  ChangeLog  Debug.cc  Debug.h  FileData.cc  FileData.h  JPEG.cc  JPEG.h  JPEGFile.cc  JPEGFile.h  Makefile.am  README.md  SECURITY.md  configure.ac  e  edit.vim  jpeglevel.cc  m
.github/workflows/: c-cpp.yml  codeql.yml
